# quantalertsystem

./: .env.example  .gitignore  =5.9.0  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  validate_setup.py
.github/: copilot-instructions.md
.github/workflows/: code-quality.yml  continuous-integration.yml  dependency-management.yml  documentation.yml  performance-monitoring.yml  quant-analysis.yml  test.yml
config/: __init__.py  settings.py
docs/: STRATEGIES.md
models/: __init__.py  alerts.py  market_data.py  signals.py
quantalertsystem/: __init__.py  config.py  main.py
quantalertsystem/alerts/: __init__.py  telegram.py
quantalertsystem/strategies/: __init__.py  base.py  manager.py  technical.py
quantalertsystem/utils/: logger.py
scripts/: analyze_performance_metrics.py  create_analysis_report.py  detect_anomalies.py  generate_analysis_summary.py  health_check.py  run_analysis.py
services/: __init__.py
services/alerts/: __init__.py  alert_manager.py  telegram.py
services/features/: __init__.py  feature_engine.py  technical_indicators.py
services/ingest/: __init__.py  base.py  yahoo_finance.py
services/normalize/: __init__.py  data_normalizer.py
services/strategy/: __init__.py  base.py  manager.py  technical.py
tests/: test_config.py  test_imports.py  test_strategies.py
tests/integration/: __init__.py  test_pipeline.py
tests/performance/: __init__.py  test_benchmarks.py
